--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 DB_PASSWORD=54321
+HOST=db
+PORT=5432
+USERNAME=postgres
+DBNAME=postgres
+SSLMODE=disable
+SERVERPORT=8080
+AGEURL=https://api.agify.io/?name=
+GENDERURL=https://api.genderize.io/?name=
+NATIONALURL=https://api.nationalize.io/?name=
